Prevent zooming on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body {
     background-color: #558C89;
     border: 1px black solid;
     border-radius: 8px;
+    max-width: 765px;
     width: 765px;
     margin: auto;
 }
@@ -111,14 +112,15 @@ body {
     flex-flow: wrap;
     background-color: white;
     height: 400px;
-    width: 400px;
+    min-width: 400px;
+    width: 100%;
 }
 
 .arrow {
     background-color: white;
     box-sizing: border-box;
-    height: 150px;
-    width: 150px;
+    height: 120px;
+    width: 120px;
     border-style: solid;
     border-color: #558C89;
     border-width: 0px 1px 1px 0px;
@@ -149,17 +151,20 @@ body {
 }
 
 .arrow-container-one {
-    width: 400px
+    min-width: 400px;
+    width: 100%;
 }
 
 .arrow-container-right {
-    width: 180px;
-    margin-left: 15px
+    /* margin-left: 15px; */
+    min-width: 180px;
+    width: 50%;
 }
 
 .arrow-container-left {
-    width: 180px;
-    margin-right: 15px
+    min-width: 180px;
+    width: 50%;
+    /* margin-right: 15px */
 }
 
 @media (min-width: 760px) {
